--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -12,7 +12,7 @@ $system-fonts: (
 $primary-font: 'Objective';
 
 //colours
-$background-colour: #292929;
+$background-colour: #222;
 //#fff
 
 $heading-colour: #fff; //#1e1e1e
