--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   flex-direction: column;
-  margin: 10vh 0;
+  margin: 10vw 0;
   min-height: 80vh;
   width: 100%;
 }
@@ -24,7 +24,8 @@
 .about-body {
   line-height: 2;
   margin: 0;
-  max-width: 40em;
+  margin-top: 3em;
+  max-width: 45em;
 }
 
 @include extrasmall {
